# grid-ontology

./: .coveragerc  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  project.yaml  pyproject.toml
.github/workflows/: test.yml
charter/: Project-Charter.md
docs/: USAGE.md  cim-e2e-validation-report.md  deepseek_e2e_report.md  perf_baseline.md  stage2-e2e-validation-report.md  v1.1-roadmap.md
docs/GBT43259301—2024/: cim-base-full.md
docs/adr/: ADR-0001-psa-level-means-current-certification.md  ADR-template.md
docs/charter/: Project-Charter.md
docs/governance/: Transformer Semantic Package v0.1.md  compatibility-analysis-template.md  cts-gap-register.md  grid-ontology-PSA-Alignment-Constraint-v0.1.md  level-2-roadmap.md  psa-baseline-compliance-report-v0.1.md  psa-baseline-compliance-report-v0.2.md  psa-semantic-package-contract.md  release-process.md
docs/releases/: v1.8.0-notes.md
docs/tooling-companions/: cim-ontology-toolkit.md
scripts/: _load_env.py  build_psa_package.py  build_reference_models.py  run_stage2_e2e.py  run_stage3_rerun.py  stage4_validate.py
src/cim_ontology/: __init__.py  cli.py  pipeline.py
tests/: conftest.py
tests/e2e/: __init__.py  test_deepseek_real_e2e.py  test_full_build.py
tests/fixtures/: cim_known_classes.txt  ocr_noise_samples.json
tests/integration/: test_cli.py  test_json_schema_adapter.py  test_jsonld_context.py  test_owl_adapter.py  test_pipeline.py  test_python_types_adapter.py  test_shacl_adapter.py  test_stage1_orchestrator.py
tests/property/: _strategies.py  conftest.py  test_data_conservation.py  (+4 more)
(+110 files in other folders)
