[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cim-ontology"
version = "1.7.0"
description = "GB/T 43259.301-2024 CIM 本体提取与生成器"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Grid Ontology Team" }]
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
    "rdflib>=7.0",
    "pyshacl>=0.25",
    "pyld>=2.0",
    "markdown-it-py>=3.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "networkx>=3.3",
    "structlog>=24.1",
    "anthropic>=0.40",
    "openai>=1.40",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "jsonschema>=4.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "syrupy>=4.6",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
cim-ontology = "cim_ontology.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "DTZ", "T20"]

# mypy: third-party libraries without bundled stubs (yaml, networkx) are
# referenced through well-known APIs; treat missing stubs as soft warnings
# so the type check focuses on our own code.
[tool.mypy]
ignore_missing_imports = true
